syntax = "proto3";

package node;
option go_package = "github.com/philslol/kritis3m_scalev2/gen/go/v1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service Southbound{
  rpc CreateNode(CreateNodeRequest) returns (NodeResponse);
  rpc GetNode(GetNodeRequest) returns (NodeResponse);
  rpc ListNodes(ListNodesRequest) returns (ListNodesResponse);
  rpc UpdateNode(UpdateNodeRequest) returns (NodeResponse);
  rpc DeleteNode(DeleteNodeRequest) returns (google.protobuf.Empty);


  rpc CreateEndpointConfig(CreateEndpointConfigRequest) returns (EndpointConfig);
  rpc GetEndpointConfig(GetEndpointConfigRequest) returns (EndpointConfig);
  rpc ListEndpointConfigs(ListEndpointConfigsRequest) returns (ListEndpointConfigsResponse);
  rpc UpdateEndpointConfig(UpdateEndpointConfigRequest) returns (EndpointConfig);
  rpc DeleteEndpointConfig(DeleteEndpointConfigRequest) returns (google.protobuf.Empty);

  rpc CreateGroup(CreateGroupRequest) returns (GroupResponse );
  rpc GetGroup(GetGroupRequest) returns (GroupResponse);
  rpc ListGroups(ListGroupsRequest) returns (ListGroupsResponse);
  rpc UpdateGroup(UpdateGroupRequest) returns (GroupResponse);
  rpc DeleteGroup(DeleteGroupRequest) returns (google.protobuf.Empty);

  rpc CreateHardwareConfig(CreateHardwareConfigRequest) returns (HardwareConfigResponse);
  rpc GetHardwareConfig(GetHardwareConfigRequest) returns (HardwareConfigResponse);
  rpc ListHardwareConfigs(ListHardwareConfigsRequest) returns (ListHardwareConfigsResponse);
  rpc UpdateHardwareConfig(UpdateHardwareConfigRequest) returns (HardwareConfigResponse);
  rpc DeleteHardwareConfig(DeleteHardwareConfigRequest) returns (google.protobuf.Empty);

  rpc CreateVersionSet(CreateVersionSetRequest) returns (VersionSetResponse);
  rpc GetVersionSet(GetVersionSetRequest) returns (VersionSetResponse);
  rpc ListVersionSets(ListVersionSetsRequest) returns (ListVersionSetsResponse);
  rpc UpdateVersionSet(UpdateVersionSetRequest) returns (VersionSetResponse);
  rpc DeleteVersionSet(DeleteVersionSetRequest) returns (google.protobuf.Empty);
  rpc ActivateVersionSet(ActivateVersionSetRequest) returns (VersionSetResponse);
  rpc DisableVersionSet(DisableVersionSetRequest) returns (VersionSetResponse);
}

enum ProxyType {
  FORWARD = 0;
  REVERSE= 1;
  TLSTLS =2;
}
enum AslKeyexchangeMethod {
    ASL_KEX_DEFAULT=0;
    ASL_KEX_CLASSIC_SECP256=1;
    ASL_KEX_CLASSIC_SECP384=2;
    ASL_KEX_CLASSIC_SECP521=3;
    ASL_KEX_CLASSIC_X25519=4;
    ASL_KEX_CLASSIC_X448=5;
    ASL_KEX_PQC_MLKEM512=6;
    ASL_KEX_PQC_MLKEM768=7;
    ASL_KEX_PQC_MLKEM1024=8;
    ASL_KEX_HYBRID_SECP256_MLKEM512=9;
    ASL_KEX_HYBRID_SECP384_MLKEM768=10;
    ASL_KEX_HYBRID_SECP256_MLKEM768=11;
    ASL_KEX_HYBRID_SECP521_MLKEM1024=12;
    ASL_KEX_HYBRID_SECP384_MLKEM1024=13;
    ASL_KEX_HYBRID_X25519_MLKEM512=14;
    ASL_KEX_HYBRID_X448_MLKEM768=15;
    ASL_KEX_HYBRID_X25519_MLKEM768=16;
};

enum VersionState{
  DRAFT=0;
  PENDING_DEPLOYMENT=1;
  ACTIVE=2;
  DISABLED=3;
};


message Node {
  int32 id = 1;
  string serial_number = 2;
  int32 network_index = 3;
  string locality = 4;
  google.protobuf.Timestamp last_seen = 5;
  string version_set_id = 6;
}

message NodeResponse{
    Node node = 1;
    repeated Proxy proxy=2; 
    repeated HardwareConfig hw_configs=3; 
}

message CreateNodeRequest {
  string serial_number = 1;
  int32 network_index = 2;
  optional string locality = 3;
  string version_set_id = 4;
  string user=5;
}

message GetNodeRequest {
  int32 id = 1;
  string version_set_id = 2;
  optional bool include=3;
}

message ListNodesRequest {
  string version_set_id = 1;
  optional bool include=2;
}

message ListNodesResponse {
  repeated NodeResponse nodes = 1;
}

message UpdateNodeRequest {
  int32 id = 1;
  optional string serial_number = 2;
  optional int32 network_index = 3;
  optional string locality = 4;
  optional string version_set_id = 5;

}

message DeleteNodeRequest {
  int32 id = 1;
}

// -------------------------------------ENDPOINTCONFIG------------------------------------
message EndpointConfig {
  int32 id = 1;
  string name = 2;
  bool mutual_auth = 3;
  bool no_encryption = 4;
  AslKeyexchangeMethod asl_key_exchange_method = 5;
  optional string cipher = 6;
  string version_set_id = 7;
  string state = 8;
  string created_by = 9;
}

message CreateEndpointConfigRequest {
  string name = 1;
  bool mutual_auth = 2;
  bool no_encryption = 3;
  AslKeyexchangeMethod asl_key_exchange_method = 4;
  optional string cipher = 5;
  string version_set_id = 6;
  string created_by = 7;
}

message GetEndpointConfigRequest {
  int32 id = 1;
  string version_set_id = 2;
}

message ListEndpointConfigsRequest {
  string version_set_id = 1;
}

message ListEndpointConfigsResponse {
  repeated EndpointConfig configs = 1;
}

message UpdateEndpointConfigRequest {
  int32 id = 1;
  string version_set_id = 2;
  optional string name = 3;
  optional bool mutual_auth = 4;
  optional bool no_encryption = 5;
  optional AslKeyexchangeMethod asl_key_exchange_method = 6;
  optional string cipher = 7;
}

message DeleteEndpointConfigRequest{
  int32 id = 1;
}

// -------------------------------------Group------------------------------------

message Group {
  int32 id = 1;
  string name = 2;
  int32 log_level = 3;
  int32 endpoint_config_id = 4;
  optional int32 legacy_config_id = 5;
  string version_set_id = 7;
  string created_by = 8;
  string state = 9;
}

message CreateGroupRequest {
  string name = 1;
  int32 log_level = 2;
  optional int32 endpoint_config_id = 3;
  optional int32 legacy_config_id = 4;
  string version_set_id = 5;
  string created_by = 6;
}

message GetGroupRequest {
  int32 id = 1;
  string version_set_id = 2;
  bool include_endpoints = 3;
}

message GroupResponse {
  Group group = 1;
  optional EndpointConfig primary =2;
  optional EndpointConfig legacy = 3;
}

message ListGroupsRequest {
  string version_set_id = 1;
  bool include_endpoints= 2;
}

message ListGroupsResponse {
  repeated GroupResponse groups = 1;
}

message UpdateGroupRequest {
  int32 id = 1;
  string version_set_id = 2;
  optional string name = 3;
  optional int32 log_level = 4;
  optional int32 endpoint_config_id = 5;
  optional int32 legacy_config_id = 6;
}

message DeleteGroupRequest {
  int32 id = 1;
  string version_set_id = 2;
}


/*----------------------------- HardwareConfigs-------------------------------*/
message HardwareConfig {
  int32 id = 1;
  int32 node_id = 2;
  string device = 3;
  string ip_cidr = 4;
  string version_set_id = 5;
  string created_by = 6;
}


message CreateHardwareConfigRequest {
  int32 node_id = 1;
  string device = 2;
  string ip_cidr = 3;
  string version_set_id = 4;
  string created_by = 5;
}

message GetHardwareConfigRequest {
  int32 id = 1;
  string version_set_id = 2;
}

message HardwareConfigResponse {
  HardwareConfig hardware_config = 1;
}

message ListHardwareConfigsRequest {
  int32 node_id = 1;
  string version_set_id = 2;
}

message ListHardwareConfigsResponse {
  repeated HardwareConfig hardware_configs = 1;
}

message UpdateHardwareConfigRequest {
  int32 id = 1;
  optional string device = 2;
  optional string ip_cidr = 3;
  optional string version_set_id = 4;
}

message DeleteHardwareConfigRequest {
  int32 id = 1;
}

message Proxy {
  int32 id = 1;
  int32 node_id = 2;
  int32 group_id = 3;
  bool state = 4;
  ProxyType proxy_type = 5;
  string server_endpoint_addr = 6;
  string client_endpoint_addr = 7;
  string version_set_id = 8;
  string created_by = 9;
}


message CreateProxyRequest {
  int32 node_id = 1;
  int32 group_id = 2;
  bool state = 3;
  ProxyType proxy_type = 4;
  string server_endpoint_addr = 5;
  string client_endpoint_addr = 6;
  string created_by = 7;
  string version_set_id = 8;
}

message GetProxyRequest {
  int32 id = 1;
}

message GetProxyResponse {
  Proxy proxy = 1;
}

message ListProxiesRequest {
  string version_set_id = 1;
  oneof query{
    int32 node_id = 2;
    int32 group_id = 3;
  }
}

message ListProxiesResponse {
  repeated Proxy proxies = 1;
}

message UpdateProxyRequest {
  int32 id = 1;
  string version_set_id = 2;
  optional bool state = 3;
  optional ProxyType proxy_type = 4;
  optional int32 group_id = 5;
  optional string server_endpoint_addr = 6;
  optional string client_endpoint_addr = 7;
}

message DeleteProxyRequest {
  int32 id = 1;
}

/*----------------------------------VERSION SETS----------------------------------------*/

message VersionSet {
  string id = 1;
  string name = 2;
  string description = 3;
  VersionState state = 4;
  google.protobuf.Timestamp activated_at = 6;
  google.protobuf.Timestamp disabled_at = 7;
  string created_by = 8;
  google.protobuf.Struct metadata = 9;
}


message CreateVersionSetRequest {
  string name = 1;
  string description = 2;
  string created_by = 3;
  google.protobuf.Struct metadata = 4;
}

message GetVersionSetRequest {
  string id = 1;
}

message VersionSetResponse {
  VersionSet version_set = 1;
}

message ListVersionSetsRequest {
  optional VersionState state = 1;
}

message ListVersionSetsResponse {
  repeated VersionSet version_sets = 1;
}

message UpdateVersionSetRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Struct metadata = 4;
}

message DeleteVersionSetRequest {
  string id = 1;
}

message ActivateVersionSetRequest {
  string id = 1;
}

message DisableVersionSetRequest {
  string id = 1;
}
